IGNITE-20698 Small review fixes.