@@ -35,7 +35,6 @@ if %java_version% GEQ 9 if %java_version% LSS 11 (
     -XX:+AggressiveOpts ^
     --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED ^
     --add-exports=java.base/sun.nio.ch=ALL-UNNAMED ^
-    --add-exports=java.base/jdk.internal.loader=ALL-UNNAMED ^
     --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED ^
     --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED ^
     --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED ^
@@ -48,7 +47,6 @@ if %java_version% GEQ 11 if %java_version% LSS 14 (
     set value= ^
     --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED ^
     --add-exports=java.base/sun.nio.ch=ALL-UNNAMED ^
-    --add-exports=java.base/jdk.internal.loader=ALL-UNNAMED ^
     --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED ^
     --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED ^
     --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED ^
@@ -61,7 +59,6 @@ if %java_version% GEQ 14 if %java_version% LSS 15 (
     set value= ^
     --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED ^
     --add-exports=java.base/sun.nio.ch=ALL-UNNAMED ^
-    --add-exports=java.base/jdk.internal.loader=ALL-UNNAMED ^
     --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED ^
     --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED ^
     --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED ^
@@ -74,7 +71,6 @@ if %java_version% GEQ 14 if %java_version% LSS 15 (
 if %java_version% GEQ 15 (
     set value= ^
     --add-opens=java.base/jdk.internal.access=ALL-UNNAMED ^
-    --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED ^
     --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED ^
     --add-opens=java.base/sun.nio.ch=ALL-UNNAMED ^
     --add-opens=java.base/sun.util.calendar=ALL-UNNAME ^
